# grit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: demo.py  demo.tape  demo_server.py  incident-card.sample.html  incident_supabase.py  incident_supabase_server.py
grit/: __init__.py  audit.py  backtest.py  cli.py  dashboard.py  flow.py  gateway.py  incident.py  jsonrpc.py  policy.py  recorder.py  redact.py  risk.py  sessdiff.py  upstream.py
tests/: test_audit.py  test_backtest.py  test_cli_backtest_diff.py  test_cli_features.py  test_controls.py  test_e2e.py  test_flight.py  test_flow.py  test_incident_card.py  test_jsonrpc.py  test_notify.py  test_observe.py  test_policy.py  test_redact.py  test_risk.py  test_sessdiff.py
